packages/frontend/src/features/CategoryProductList/index.module.css
.category-product-list {
    display: flex;
    justify-content: center;

    width: min(calc(var(--vw) * 100), 100%);
}

.category-product-list-width-controller {
    display: flex;
    flex-direction: column;

    width: min(calc(var(--vw) * 100), 100%);
    max-width: 1280px;
    padding: 0px 16px;
    margin: auto;
}

.category-product-list-category-group-container {
    display: grid;
    grid-template-columns: 1fr;
    gap: 16px;
}

.category-product-list-category-group {
    display: flex;
    flex-direction: column;
    gap: 16px;

    padding: 16px 0px 0px;
}

.category-product-list-category-group[data-layout="narrow"] {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 16px;
}

.category-product-list-category-group-products {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 16px;

    clip-path: polygon(-10% 0%, 110% 0%, 110% 100%, -10% 100%);

    padding: 0px 0px 16px;

    @media (min-width: $mantine-breakpoint-xs) {
        grid-template-columns: repeat(2, 1fr);
    }

    @media (min-width: $mantine-breakpoint-md) {
        grid-template-columns: repeat(3, 1fr);
    }

    @media (min-width: $mantine-breakpoint-lg) {
        grid-template-columns: repeat(4, 1fr);
    }
}

.category-product-list-category-group-container[data-sidebar="true"] {
    @media (min-width: $mantine-breakpoint-sm) {
        grid-template-columns: 50% 1fr;
    }

    @media (min-width: $mantine-breakpoint-md) {
        grid-template-columns: 33% 1fr;
    }

    @media (min-width: $mantine-breakpoint-lg) {
        grid-template-columns: 25% 1fr;
    }

    .category-product-list-category-group[data-layout="narrow"] {
        .category-product-list-category-group-products {
            @media (min-width: $mantine-breakpoint-xs) {
                grid-template-columns: repeat(2, 1fr);
            }
        }
    }

    .category-product-list-category-group-products {
        @media (min-width: $mantine-breakpoint-sm) {
            grid-template-columns: repeat(1, 1fr);
        }

        @media (min-width: $mantine-breakpoint-md) {
            grid-template-columns: repeat(2, 1fr);
        }

        @media (min-width: $mantine-breakpoint-lg) {
            grid-template-columns: repeat(3, 1fr);
        }
    }
}

.results-displayed-count {
    color: black;
    font-family: var(--font-primary);
    font-size: 0.92rem;
    font-weight: 400;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 1rem;
    }
}

